# RBAC-Backend

./: .env.example  .gitignore  README.md  alloy.hcl  bandit-report.json  docker-compose.yml  loki-config.yaml  manage.py  promtail.yaml  pyproject.toml  requirements.txt  start.py
DjangoApi/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
accounts/management/commands/: seed_initial_data.py  seed_rbac.py
accounts/migrations/: 0001_initial.py
